--- a/_Variables.scss
+++ b/_Variables.scss
@@ -5,6 +5,7 @@ $SHADOW: 3px 3px 5px rgba(16 ,16, 16, .75);
 $SHADOW-LIGHT: 3px 3px 5px rgba(16, 16, 16, 0.301);
 
 $greyMain-background: #f6f6f6;
+$greyDark-background: #ededed;
 /*------------------HEADER-----------------*/
 $sideMenuLength: 200px;
 $headerWhiteText: rgb(247, 247, 247);
