--- a/Responsive.scss
+++ b/Responsive.scss
@@ -490,6 +490,7 @@
           box-shadow: none;
           width: 100%;
           .box {
+            padding: 0 15px;
             background: none;
             display: flex;
             flex-direction: column;
