course swiper done throgh all sizes

--- a/Responsive.css
+++ b/Responsive.css
@@ -214,7 +214,7 @@
     width: 80px;
   }
   .outlet .mainPageSection .courseSwiper {
-    display: none;
+    width: 307px;
   }
   .footer {
     display: none;
