four steps pics and effects done

--- a/_Fonts.scss
+++ b/_Fonts.scss
@@ -1,21 +1,21 @@
 @font-face {
-    font-family: iranSansnormal;
+    font-family: iranSansNormal;
     src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\).ttf');
 }
 @font-face {
-    font-family: iranSansblack;
+    font-family: iranSansBlack;
     src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Black.ttf');
 }
 @font-face {
-    font-family: iranSansbold;
+    font-family: iranSansBold;
     src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Bold.ttf');
 }
 @font-face {
-    font-family: iranSanslight;
+    font-family: iranSansLight;
     src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Light.ttf');
 }
 @font-face {
-    font-family: iranSansmedium;
+    font-family: iranSansMedium;
     src: url('./0Font/IRANSansWeb/IRANSansWeb\(FaNum\)_Medium.ttf');
 }
 @font-face {
