title pic replaced with svg

--- a/style.css
+++ b/style.css
@@ -915,10 +915,10 @@ body {
 }
 
 .outlet .mainPageSection .title .pic {
-  background: url("./images/img/Asset 3-8.png") no-repeat;
+  background: url("./images/img/Asset 26.svg") no-repeat;
   background-size: 100%;
   width: 144px;
-  height: 102.5px;
+  height: 103px;
   position: relative;
 }
 
