--- a/Responsive.scss
+++ b/Responsive.scss
@@ -490,11 +490,12 @@
           box-shadow: none;
           width: 100%;
           .box {
-            padding: 0 15px;
+            padding: 0;
             background: none;
             display: flex;
             flex-direction: column;
             width: 100%;
+            height: auto;
             .coloredWrapper {
               position: static;
               order: 1;
@@ -502,13 +503,27 @@
             .text {
               position: static;
               order: 2;
+              font-size: 24px;
+              padding-top: 10px;
             }
             .hover {
-              display: block;
+              opacity: 100%;
               order: 3;
               font-size: 15px;
               font-family: iranSansNormal;
               padding: 30px 15px;
+              position: static;
+              width: 100%;
+              padding: 30px 10px;
+              color: #898989;
+              line-height: 27px;
+              font-size: 18px;
+            }
+            .image {
+              order: 2;
+              min-height: 60px;
+              margin-top: 25px;
+              opacity: 100% !important;
             }
           }
         }
