course swiper bug fix

--- a/Responsive.css
+++ b/Responsive.css
@@ -14,6 +14,9 @@
   .footer .rightBottom .eNamad {
     border: 12px solid #333333;
   }
+  .outlet .mainPageSection .courseSwiper {
+    width: 960px;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px till 993 and down) */
