--- a/Responsive.scss
+++ b/Responsive.scss
@@ -16,6 +16,13 @@
       }
     }
   }
+  .outlet {
+    .mainPageSection {
+      .courseSwiper {
+        width: 960px;
+      }
+    }
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px till 993 and down) */
