--- a/Responsive.scss
+++ b/Responsive.scss
@@ -536,6 +536,7 @@
               color: #898989;
               line-height: 27px;
               font-size: 18px;
+              transform: scale(1);
             }
             .image {
               order: 2;
