--- a/style.css
+++ b/style.css
@@ -132,6 +132,10 @@ body {
   font-family: iranSansMedium;
 }
 
+.noDisplay {
+  display: none;
+}
+
 /*--------General--------------*/
 #resMenu {
   height: 100%;
@@ -144,19 +148,22 @@ body {
   -webkit-transition: 0.4s;
   transition: 0.4s;
   z-index: 5;
+  overflow-y: scroll;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 100px;
+  font-size: 15px;
 }
 
 #resMenu .fa-times {
@@ -172,7 +179,13 @@ body {
   cursor: pointer;
 }
 
-#resMenu .content .mainNav {
+#resMenu .OriginContent {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#resMenu .OriginContent .mainNav {
+  padding-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -188,17 +201,95 @@ body {
           flex-direction: column;
 }
 
-#resMenu .content .mainNav .item .collapsible::after {
+#resMenu .OriginContent .mainNav .item .courseSelector {
+  color: #727272;
+}
+
+#resMenu .OriginContent .mainNav .item .courseSelector::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "";
+  font-size: 12px;
+}
+
+#resMenu .OriginContent .mainNav .item .collapsible {
+  color: #42515a;
+  text-align: center;
+}
+
+#resMenu .OriginContent .mainNav .item .collapsible::after {
   content: "\f107";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   position: relative;
   left: -4px;
   top: 2px;
+  display: inline-block;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-#resMenu .content .mainNav .item .content {
+#resMenu .OriginContent .mainNav .item .collapsible.active::after {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+#resMenu .OriginContent .mainNav .item .content {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#resMenu .OriginContent .mainNav .item .content .InnerNav {
   display: none;
+}
+
+#resMenu .OriginContent.out {
+  opacity: 0;
+}
+
+#resMenu .crossContent {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  position: absolute;
+  left: -100%;
+  opacity: 0;
+  margin: auto;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#resMenu .crossContent i {
+  position: absolute;
+  right: -49px;
+  top: -92px;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  font-size: 25px;
+  color: black;
+  padding: 10px;
+}
+
+#resMenu .crossContent.in {
+  left: 0;
+  right: 0;
+  opacity: 100%;
 }
 
 .header {
@@ -242,7 +333,8 @@ body {
   gap: 20px;
 }
 
-.header .topBar .right > span, .header .topBar .right .wrap {
+.header .topBar .right > span,
+.header .topBar .right .wrap {
   font-size: 13px;
 }
 
@@ -1038,10 +1130,12 @@ body {
   line-height: 19px;
   text-align: center;
   opacity: 0;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   position: absolute;
   width: 90%;
+  -webkit-transform: scale(0.6);
+          transform: scale(0.6);
 }
 
 .outlet .mainPageSection .flex .boxWrapper .box .image {
@@ -1050,12 +1144,14 @@ body {
   background: url("./images/img/FourSteps.png") no-repeat;
   background-size: 416%;
   opacity: 100%;
-  -webkit-transition: .2s;
-  transition: .2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .outlet .mainPageSection .flex .boxWrapper .box:hover .hover {
   opacity: 100%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .outlet .mainPageSection .flex .boxWrapper .box:hover .image {
